use FHS instead of FSSTND

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ dpkg (1.8.0) unstable; urgency=low
     Closes: Bug#79352
   * Be more paranoid with file permissions when extracing files
   * Apply statoverrides to more then just files
+  * Update update-alternatives manpage to use FHS instead of FSSTND.
+    Closes: Bug#80237
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
