--- a/scripts/update-alternatives.8
+++ b/scripts/update-alternatives.8
@@ -5,7 +5,7 @@
 .\" by the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.  There is NO WARRANTY.  You can
 .\" find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-.TH UPDATE-ALTERNATIVES 8 "19 January 1998" "DEBIAN" "Debian GNU/Linux"
+.TH UPDATE-ALTERNATIVES 8 "19 January 1998" "Debian Project" "dpkg utilities"
 .SH NAME
 update-alternatives \- maintain symbolic links determining default commands
 .SH SYNOPSIS
@@ -79,7 +79,7 @@ which in turn is a symbolic link to the actual file referenced.
 This is done so that the system administrator's changes can be confined
 within the
 .I /etc
-directory: the FSSTND (q.v.) gives reasons why this is a Good Thing.
+directory: the FHS (q.v.) gives reasons why this is a Good Thing.
 .PP
 When each package
 providing a file with a particular functionality is
@@ -98,7 +98,7 @@ so that they are changed as a group; for example, when several versions
 of the
 .BR vi (1)
 editor are installed, the man page referenced by
-.I /usr/man/man1/vi.1
+.I /usr/share/man/man1/vi.1
 should correspond to the executable referenced by
 .IR /usr/bin/vi .
 .B update-alternatives
@@ -348,10 +348,9 @@ or, if that is not possible, email the author directly.
 If you find any discrepancy between the operation of
 .B update-alternatives
 and this manual page, it is a bug,
-either in the implementation or the documentation;
-please report it.
+either in the implementation or the documentation; please report it.
 .SH AUTHOR
-Debian GNU/Linux update-alternatives is copyright 1995
+Debian update-alternatives is copyright 1995
 Ian Jackson.  It is free software; see the GNU General Public Licence
 version 2 or later for copying conditions.  There is NO warranty.
 .PP
@@ -360,7 +359,6 @@ This is free documentation; see the GNU General Public Licence
 version 2 or later for copying conditions.  There is NO WARRANTY.
 .PP
 You can find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-.\" .SH ACKNOWLEDGEMENTS
 .SH "SEE ALSO"
 .BR ln (1),
-FSSTND, the linux Filesystem Standard.
+FHS, the Filesystem Hierarchy Standard.
