--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec 23 16:24:31 CST 2000 Adam Heath <doogie@debian.org>
+
+  * debian/dpkg.postinst: Remove bashism.
+
 Sat Dec 23 03:06:19 CST 2000 Adam Heath <doogie@debian.org>
 
   * scripts/cl-debian.pl: Make '#' optional in Closes: tags.
