--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec 23 16:44:25 CST 2000 Adam Heath <doogie@debian.org>
+
+  * main/depcon.c: Added description for "suggests" in describedepcon().
+
 Sat Dec 23 16:24:31 CST 2000 Adam Heath <doogie@debian.org>
 
   * debian/dpkg.postinst: Remove bashism.
