Modified DPKG_C_GCC_TRY_WARNS() to call AC_SUBST, so that we can use the result of the test during build time.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Dec 23 19:33:05 CST 2000 Adam Heath <doogie@debian.org>
+
+  * automake/dpkg.m4, configure.in, Makefile.conf.in:
+    Modified DPKG_C_GCC_TRY_WARNS() to call AC_SUBST, so that we can
+    use the result of the test during build time.
+
 Sat Dec 23 16:44:25 CST 2000 Adam Heath <doogie@debian.org>
 
   * main/depcon.c: Added description for "suggests" in describedepcon().
