--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Modified DPKG_C_GCC_TRY_WARNS() to call AC_SUBST, so that we can
+    use the result of the test during build time.  Closes: Bug#75138
   * Added description for "suggests" in main/depcon.c:describedepcon().
     Closes: Bug#74113
   * Removed bashing from dpkg.postinst.
