Document COLUMNS environment variable.

--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -489,6 +489,9 @@ shell rather than suspending \fBdpkg\fP, while doing a shell escape.
 .TP
 .B SHELL
 The program \fBdpkg\fP will execute while starting a new shell.
+.B COLUMNS
+Sets the number of columns \fBdpkg\fP should use when displaying formatted
+text.  Currently only used by -l.
 
 .SH EXAMPLES
 To list packages related to the editor vi:
