Fix typo in dpkg-deb.1.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec 23 22:41:47 CST 2000 Adam Heath <doogie@debian.org>
+
+  * dpkg-deb/dpkg-deb.1: Fix typo.
+
 Sat Dec 23 22:24:23 CST 2000 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-divert.pl: Add --truename option.
