--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Fix typo in dpkg-deb.1.  Closes: #65945.
   * Add --truename option to dpkg-divert.  Closes: #68489.
   * Documented COLUMNS in dpkg(8).  Closes: #77001.
   * Modified DPKG_C_GCC_TRY_WARNS() to call AC_SUBST, so that we can
