--- a/dpkg-deb/dpkg-deb.1
+++ b/dpkg-deb/dpkg-deb.1
@@ -212,7 +212,7 @@ when building packages to be parsed by versions of dpkg older than
 0.93.76 (September 1995), which was released as i386 a.out only.
 .TP
 .BR --nocheck
-Inhibit's
+Inhibits
 .BR "dpkg\-deb \-\-build" 's
 usual checks on the proposed contents of an archive.  You can build
 any archive you want, no matter how broken, this way.
