Document that --set-selections does not actually install any packages.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Dec 23 22:53:23 CST 2000 Adam Heath <doogie@debian.org>
+
+  * main/dpkg.8: Document that --set-selections does not actually
+    install any packages.
+
 Sat Dec 23 22:41:47 CST 2000 Adam Heath <doogie@debian.org>
 
   * dpkg-deb/dpkg-deb.1: Fix typo.
