Document that --largemem is the default, and that the test point is 24 megs.

--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -401,8 +401,8 @@ Ignore dependency-checking for specified packages (actually, checking is
 performed, but only warnings about conflicts are given, nothing else).
 .TP
 \fB--largemem\fP | \fB--smallmem\fP
-Tells \fBdpkg\fP whether to preserve memory (e.g. with less than 4 MB
-of RAM) or consume as much as needed.
+Tells \fBdpkg\fP whether to preserve memory (e.g. with less than 24 MB
+of RAM) or consume as much as needed(the default).
 .TP
 \fB--new\fP | \fB--old\fP
 Select new or old binary package format. This is a \fBdpkg-deb\fP(1)
