Minor tweak so that when patch 2.5.4 is manually used to apply a diff, it doesn't get applied multiple times.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Dec 24 01:00:59 CST 2000 2000 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl: Minor tweak so that when patch 2.5.4 is
+    manually used to apply a diff, it doesn't get applied multiple
+    times.
+
 Sat Dec 23 23:28:52 CST 2000 Adam Heath <doogie@debian.org>
 
   * utils/start-stop-daemon.c: Add --nicelevel, to alter a
