--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Minor tweak so that when patch 2.5.4 is manually used to apply a diff,
+    it doesn't get applied multiple times.  Closes: #65021
   * Add --nicelevel to start-stop-daemon, to alter a programs priority
     before starting.  Closes: #65191.
   * Document that --largemem is the default, and that the test point is
