Fix to pass on admindir from dselect to dpkg.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-Sun Dec 24 01:00:59 CST 2000 2000 Adam Heath <doogie@debian.org>
+Sun Dec 24 02:38:38 CST 2000 Adam Heath <doogie@debian.org>
+
+  * methods/disk.install, methods/disk.setup, methods/disk.update,
+    methods/floppy.install, methods/floppy.update, methods/hd.setup,
+    methods/hd.unpack, methods/hd.update: Fix to pass on admindir
+    from dselect to dpkg.
+
+Sun Dec 24 01:00:59 CST 2000 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-source.pl: Minor tweak so that when patch 2.5.4 is
     manually used to apply a diff, it doesn't get applied multiple
