Format help string for --abort-after like other option help strings.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 24 04:32:34 CST 2000 Adam Heath <doogie@debian.org>
+
+  * main/main.c: Format help string for --abort-after like other
+    option help strings.
+
 Sun Dec 24 02:38:38 CST 2000 Adam Heath <doogie@debian.org>
 
   * methods/disk.install, methods/disk.setup, methods/disk.update,
