Added a --force-all option.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 24 05:10:29 CST 2000 Adam Heath <doogie@debian.org>
+
+  * main/main.c: Added a --force-all option.
+
 Sun Dec 24 04:32:34 CST 2000 Adam Heath <doogie@debian.org>
 
   * main/main.c: Format help string for --abort-after like other
