--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Added a --force-all option.  Closes: #61354.
   * Format help string for --abort-after like other option help strings.
     Closes: #62464.
   * Fix dselect methods to pass admindir to dpkg from dselect.
