--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -331,6 +331,9 @@ Things marked with (*) are forced by default.
 only. Using them without fully understanding their effects may break
 your whole system.\fP
 
+\fBall\fP:
+Turns on(or off) all force options.
+
 \fBauto-select\fP(*):
 Select packages to install them, and deselect packages to remove them.
 
