Changed documentation and help, as -f only applies during remove.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * update-rc.d: Changed documentation and help, as -f only applies during
+    remove.  Closes: #55049.
   * Added a --force-all option.  Closes: #61354.
   * Format help string for --abort-after like other option help strings.
     Closes: #62464.
