Added depends on sysvinit (>= 2.72), so that we can make sure that /etc/rcS.d exists.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 24 05:31:27 CST 2000 Adam Heath <doogie@debian.org>
+
+  * debian/control: Added depends on sysvinit (>= 2.72), so that we
+    can make sure that /etc/rcS.d exists.
+
 Sun Dec 24 05:24:23 CST 2000 Adam Heath <doogie@debian.org>
 
   * scripts/update-rc.d: Changed documentation and help, as -f only
