--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Added depends on sysvinit (>= 2.72), so that we can make sure that
+    /etc/rcS.d exists.  Closes: #55037.
   * update-rc.d: Changed documentation and help, as -f only applies during
     remove.  Closes: #55049.
   * Added a --force-all option.  Closes: #61354.
