Add -k|--symlink option.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 24 06:31:55 CST 2000 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-name.sh: Add -k|--symlink option.
+
 Sun Dec 24 05:58:48 CST 2000 Adam Heath <doogie@debian.org>
 
   * dselect/main.cc: Made the accelerator keys in dselect's main
