--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Add -k|--symlink option to dpkg-name.  Closes: #35040
   * Made the accelerator keys in dselect's main menu separate options, so
     that they can be translated separately.  Closes: #50955.
   * Added depends on sysvinit (>= 2.72), so that we can make sure that
