--- a/scripts/dpkg-name.1
+++ b/scripts/dpkg-name.1
@@ -11,7 +11,7 @@ dpkg\-name \- rename Debian packages to full package names
 .B dpkg\-name 
 [\-a|\-\-no\-architecture] [\-o|\-\-overwrite] [\-s|\-\-subdir [dir]]
 [\-c|\-\-create\-dir] [\-h|\-\-help] [\-v|\-\-version]
-[\-l|\-\-license] [\-[--] [files]
+[\-l|\-\-license] [\-k|\-\-symlink] [\-[--] [files]
 .SH DESCRIPTION
 .PP
 This manual page documents the
@@ -47,6 +47,9 @@ This can be used when building new packages.
 .TP
 .B "\-a, \-\-no\-architecture"
 The destination filename will not have the architecture information. 
+.TP
+.B "\-k, \-\-symlink"
+Create a symlink, instead of moving.
 .TP 
 .B "\-o, \-\-overwrite"
 Existing files will be overwritten if they have the same name as the
