make dselect commandline options work again

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 24 17:35:12 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/main.cc: make commandline options work again
+
 Sun Dec 24 17:05:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-genchanges.pl: output descriptions for udebs as well
