Undo earlier changes from Adam to handle -W options for the compiler and do things much simpler instead based on the old working but not correctly used code.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Sun Dec 24 17:35:12 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/main.cc: make commandline options work again
+  * Makefile.conf.in, configure.in,automake/dpkg.m4: revert changes from Adam
+  * Makefile.conf.in: add @CWARNS@ to CFLAGS
+  * configure.in: add AC_SUBST for CWARNS
 
 Sun Dec 24 17:05:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
