Use DESTDIR when installing /etc/dpkg/origins/dpkg.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Dec 24 13:59:36 CST 2000 Adam Heath <doogie@debian.org>
+
+  * Use DESTDIR when installing /etc/dpkg/origins/dpkg
+
 Sun Dec 24 17:35:12 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/main.cc: make commandline options work again
