--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 24 23:48:45 CST 2000 Adam Heath <doogie@debian.org>
+
+  * include/dpkg.h.in, lib/Makefile.in, lib/mlib.c, utils/Makefile.in,
+    utils/md5sum.c: Moved md5 code into generic buffer_copy loop.
+
 Sun Dec 24 13:59:36 CST 2000 Adam Heath <doogie@debian.org>
 
   * Use DESTDIR when installing /etc/dpkg/origins/dpkg
