Removed --smallmem code.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Dec 26 03:24:38 CST 2000 Adam Heath <doogie@debian.org>
+
+  * main/main.c, main/files.c: Removed --smallmem code.
+
 Mon Dec 25 00:46:47 CST 2000 Adam Heath <doogie@debian.org>
 
   * utils/md5sum.c: Don't use FILE * in mdfile.
