--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Dec 26 03:43:17 CST 2000 Adam Heath <doogie@debian.org>
+
+  * acconfig.h, config.h.bot, configure.in, main/filesdb.c,
+    automake/sysinfo.m4(removed): Removed all references to
+    sysinfo().
+
 Tue Dec 26 03:24:38 CST 2000 Adam Heath <doogie@debian.org>
 
   * main/main.c, main/files.c: Removed --smallmem code.
