--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Dec 26 08:28:17 CST 2000 Adam Heath <doogie@debian.org>
+
+  * main/main.c: Removed extraneous debug prints, that displayed the
+    state of all force options.  Doh!
+
 Tue Dec 26 04:34:02 CST 2000 Adam Heath <doogie@debian.org>
 
   * lib/fields.c, lib/parsehelp.c, include/dpkg-db.h: Increased the
