--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 27 04:55:14 CST 2000 Adam Heath <doogie@debian.org>
+
+  * lib/fields.c: Detect and issue an error when a space is in a
+    version.
+
 Wed Dec 27 04:00:32 CST 2000 Adam Heath <doogie@debian.org>
 
   * lib/nfmalloc.c: Added nfstrnsave().
