--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,7 @@ Wed Dec 27 04:55:14 CST 2000 Adam Heath <doogie@debian.org>
 
 Wed Dec 27 04:00:32 CST 2000 Adam Heath <doogie@debian.org>
 
-  * lib/nfmalloc.c: Added nfstrnsave().
+  * lib/nfmalloc.c, include/dpkg-db.h: Added nfstrnsave().
 
 Tue Dec 26 17:07:11 CST 2000 Adam Heath <doogie@debian.org>
 
