Fix minor memleak in used function hashreport.  Thanks to Adrian Bridgett <bridgett@debian.org>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Dec 28 18:43:37 CST 2000 Adam Heath <doogie@debian.org>
+
+  * lib/database.c: Fix minor memleak in used function hashreport.
+    Thanks to Adrian Bridgett <bridgett@debian.org>.
+
 Wed Dec 27 14:54:55 CST 2000 Adam Heath <doogie@debian.org>
 
   * lib/parse.c:  Removed use of getc(), and instead use pointers
