Add French manpages

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.9.0) unstable; urgency=low
     use about the same amount of memory, and largemem is faster.  Both
     --largemem and --smallmem are now obselete options, and will print
     a warning if used.
+  * Add French manpages, courtesy of Philippe Batailler
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
