utils/start-stop-daemon.c: --name is now allowed on the command line (imported from branch v1_8).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+=======
 Sat Dec 30 23:08:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/Makefile.in: add fr to SUBDIRS
   * doc/fr: new directory with French manpages
   * THANKS: add philippe batailler who translated the manpages to French
+
+Sat Dec 30 20:38:20 CST 2000 Adam Heath <doogie@debian.org>
+  
+  * utils/start-stop-daemon.c: --name is now allowed on the command
+    line.
 
 Fri Dec 29 12:39:09 CST 2000 Adam Heath <doogie@debian.org>
 
