--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,12 @@ dpkg (1.9.0) unstable; urgency=low
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
+dpkg (1.8.1) unstable; urgency=low
+
+  * Make --name a valid option.  Closes: #31206, #51953.
+
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+
 dpkg (1.8.0) unstable; urgency=low
 
   * Add -k|--symlink option to dpkg-name.  Closes: #35040
