--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-=======
+Mon Jan  1 02:04:26 CST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/parse.c: Use of PKGIOFF macro was checked in prematurely.
+
 Sat Dec 30 23:08:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/Makefile.in: add fr to SUBDIRS
