--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jan  2 22:44:14 CST 2001 Adam Heath <doogie@debian.org>
+
+  * lib/help.c: Removed an 'inlined' version of waitsubproc, and call
+    the function instead.
+
 Mon Jan  1 02:07:47 CST 2001 Adam Heath <doogie@debian.org>
 
   * lib/varbuf.c, include/dpkg-db.h: Add varbufdupc().
