Updated Swedish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 04 05:19:37 CET 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
+
 Wed Jan  3 10:35:49 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * configure.in: add doc/fr/Makefile
