--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jan  5 22:36:24 CST 2001 Adam Heath <doogie@debian.org>
+
+  * main/main.c, lib/dbmodify.c, main/dpkg.8: Add a --status-pipe.
+
 Fri Jan  5 22:25:06 CST 2001 Adam Heath <doogie@debian.org>
 
   * lib/varbuf.c: varbuf(v)printf now return the number of characters
