--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -455,7 +455,10 @@ be marked selected for installation.
 .BR -E " | " --skip-same-version
 Don't install the package if the same version of the package is already
 installed.
-
+.TP
+\fB--status-pipe\fP\fI<n>\fP
+Send package status info to file descriptor \fI<n>\fP.  This can be given
+multiple times.
 .SH FILES
 The files listed here are in their default directories, see option
 \fB--admindir\fP to see how to change locations of these files.
