ignore vim swapfiles

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.9.0) unstable; urgency=low
     a warning if used.
   * Update French translation, Closes: Bug#65284
   * Add French manpages, courtesy of Philippe Batailler
+  * Ingore vim swapfiles in dpkg-soruce, Closes: Bug#81630
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
