--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ dpkg (1.9.0) unstable; urgency=low
   * Update French translation, Closes: Bug#65284
   * Add French manpages, courtesy of Philippe Batailler
   * Ingore vim swapfiles in dpkg-soruce, Closes: Bug#81630
+  * remove --import option from dpkg-statoverride, Closes: Bug#81358
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
