--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan  8 15:46:13 PST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-statoverride.{pl,8}: remove --import option now that
+    suidmanager can convert everything
+
 Mon Jan  8 15:12:21 PST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-source.pl: add vim swapfiles to the default ignore regexp
