Add a --command-pipe.  This allows multiple commands to be passed to a single instance of dpkg, over the file descriptor passed on the cmdline.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jan 14 02:19:18 CST 2001 Adam Heath <doogie@debian.org>
+
+  * main/main.c, main/archives.c:  Add a --command-pipe.  This allows
+    multiple commands to be passed to a single instance of dpkg, over
+    the file descriptor passed on the cmdline.
+
 Thu Jan 11 09:35:00 PST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-statoverride.pl: do chown before chmod so we don't
