--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun Jan 14 02:37:05 CST 2001 Adam Heath <doogie@debian.org>
+
+  * main/cleanup.c, main/help.c, main/processarc.c:  Removed duplicate
+    code that was used to exec maintainer scripts, and moved it to a
+    single function.  In the future, this single function could be used
+    for tracking script execution.
+
 Sun Jan 14 02:27:48 CST 2001 Adam Heath <doogie@debian.org>
 
   * main/main.h, main/main.c:  Change --{status,command}-pipe to
