Bring up to date.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 14 02:46:14 CST 2001 Adam Heath <doogie@debian.org>
+
+  * po/dpkg.pot: Bring up to date.
+
 Sun Jan 14 02:37:05 CST 2001 Adam Heath <doogie@debian.org>
 
   * main/cleanup.c, main/help.c, main/processarc.c:  Removed duplicate
