Fix -Wall messages.  Also, fix handling of user-defined fields in parsedb().

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jan 14 12:29:46 CST 2001 Adam Heath <doogie@debian.org>
+
+  * lib/mlib.c, lib/fields.c, lib/parse.c, main/help.c, main/main.c,
+    po/dpkg.pot: Fix -Wall messages.  Also, fix handling of user-defined
+    fields in parsedb().
+
 Sun Jan 14 02:46:14 CST 2001 Adam Heath <doogie@debian.org>
 
   * po/dpkg.pot: Bring up to date.
