convert nfmalloc to obstack, and include obstack.[ch] for non-GNU systems

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sun Jan 14 13:54:46 EST 2001 Ben Collins <bcollins@debian.org>
+
+  * optlib/obstack.[ch]: New files for non GNU systems
+  * optlib/Makefile.in (SOURCES): add obstack.c
+  * lib/nfmalloc: remove nfmalloc()
+  * include/dpkg-db.h: define obstack initializers, and define nfmalloc as a
+    macro for obstack_alloc
+  * lib/dbmodify.c (modstatdb_init): initialize obstack if it hasn't been already
+
 Sun Jan 14 12:29:46 CST 2001 Adam Heath <doogie@debian.org>
 
   * lib/mlib.c, lib/fields.c, lib/parse.c, main/help.c, main/main.c,
