--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.9.0) unstable; urgency=low
   * Add French manpages, courtesy of Philippe Batailler
   * Ingore vim swapfiles in dpkg-soruce, Closes: Bug#81630
   * remove --import option from dpkg-statoverride, Closes: Bug#81358
+  * Replace nfmalloc implementation with obstack. Added obstack.[ch] to
+    optlib, for non-GNU systems.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
