--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan 15 07:27:10 CET 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po: Updated Swedish translation.
+
 Mon Jan 15 00:26:45 EST 2001 Ben Collins <bcollins@debian.org>
 
   * lib/nfmalloc.c: use obstack_copy/obstack_copy0 for nfstrsave and
