scripts/dpkg-divert.pl: only allow absolute filenames main/configure.c: add -N option to diff invocation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jan 21 20:09:36 SGT 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-divert.pl: only allow absolute filenames
+  * main/configure.c: add -N option to diff invocation
+
 Mon Jan 15 07:27:10 CET 2001 peter karlsson <peterk@debian.org>
 
   * po/sv.po: Updated Swedish translation.
