--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ dpkg (1.9.0) unstable; urgency=low
   * remove --import option from dpkg-statoverride, Closes: Bug#81358
   * Replace nfmalloc implementation with obstack. Added obstack.[ch] to
     optlib, for non-GNU systems.
+  * dpkg-divert only allows absolute filenames now. Closes: Bug#82419
+  * Handle diffs from non-existing files to existing files. Closes: Bug#82708
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
