scripts/dpkg-statoverride.pl: use -e instead of -f to test     for filesystem object existance scripts/dpkg-source.pl: swap chdir and open in extracttar to     prevent race with source-directory being removed while the     sh/grep process is still running. Patch from Colin Watson

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Feb  2 14:27:47 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-statoverride.pl: use -e instead of -f to test
+    for filesystem object existance
+  * scripts/dpkg-source.pl: swap chdir and open in extracttar to
+    prevent race with source-directory being removed while the
+    sh/grep process is still running. Patch from Colin Watson
+
 Thu Feb  1 18:22:05 EST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * scripts/dpkg-source.pl: fix error in error message
