* utils/Makefile.in: Do not use libopt.a, since libdpkg.a not includes those     objects   * optlib/Makefile.in: do not generate libopt.a   * lib/Makefile.in: build libdpkg.a to include the objects from optlib

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Feb 15 11:24:46 EST 2001 Ben Collins <bcollins@debian.org>
+
+  * utils/Makefile.in: Do not use libopt.a, since libdpkg.a not includes those
+    objects
+  * optlib/Makefile.in: do not generate libopt.a
+  * lib/Makefile.in: build libdpkg.a to include the objects from optlib
+
 Sat Feb  3 18:25:25 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/rules: use POSIX glob instead of regexp
