add optlib to -I path

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Thu Feb 15 11:24:46 EST 2001 Ben Collins <bcollins@debian.org>
     objects
   * optlib/Makefile.in: do not generate libopt.a
   * lib/Makefile.in: build libdpkg.a to include the objects from optlib
+  * Makefile.conf.in: Add optlib to -I includes
 
 Sat Feb  3 18:25:25 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
